[gd_scene load_steps=3 format=3 uid="uid://dn0jf50qwepwe"]

[ext_resource type="Script" uid="uid://8fo664mixu5" path="res://level_complete_menu.gd" id="1_e403v"]
[ext_resource type="FontFile" uid="uid://6j8lr80meq8j" path="res://assets/font/CutePixel.ttf" id="2_5c5y7"]

[node name="LevelCompleteMenu" type="CanvasLayer"]
process_mode = 2
visible = false
script = ExtResource("1_e403v")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.784314)

[node name="MainContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="MainContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "LEVEL COMPLETE!"
horizontal_alignment = 1

[node name="LevelScoreDisplayLabel" type="Label" parent="MainContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.629675, 0.629675, 0.629675, 1)
theme_override_fonts/font = ExtResource("2_5c5y7")
text = "Level Score: 000000"
horizontal_alignment = 1

[node name="TimeBonusDisplayLabel" type="Label" parent="MainContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.629675, 0.629675, 0.629675, 1)
theme_override_fonts/font = ExtResource("2_5c5y7")
text = "Bonus time: 000000"
horizontal_alignment = 1

[node name="FinalTotalScoreLabel" type="Label" parent="MainContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.629675, 0.629675, 0.629675, 1)
theme_override_fonts/font = ExtResource("2_5c5y7")
text = "Final Score: 0"
horizontal_alignment = 1

[node name="NextLevelButton" type="Button" parent="MainContainer"]
layout_mode = 2
text = "Next Level"

[node name="RestartButton" type="Button" parent="MainContainer"]
layout_mode = 2
text = "Restart Level"

[node name="LevelSelectButton" type="Button" parent="MainContainer"]
layout_mode = 2
text = "Select Level"

[node name="ExitToMenuButton" type="Button" parent="MainContainer"]
layout_mode = 2
text = "Exit to Menu"
